tests/health/tests__lsp__error_outline.toit.gold
tests/lsp/error_outline.toit:3:6: error: Expected class name
class:
     ^
tests/lsp/error_outline.toit:11:11: error: Expected name of declaration
  abstract
          ^
tests/lsp/error_outline.toit:16:9: error: Expected name of declaration
  static:
        ^
tests/lsp/error_outline.toit:19:1: error: Expected name of declaration
:
^
